# See the build system documentation in IDF programming guide
# for more information about component CMakeLists.txt files.

idf_component_register(
    SRCS 
    	"main.c"        # list the source files of this component
    	"station.c"
    	"tcp_server.c"
    	"uart_events.c"
    INCLUDE_DIRS        # optional, add here public include directories
    	"includes"
    PRIV_INCLUDE_DIRS   # optional, add here private include directories
    REQUIRES            # optional, list the public requirements (component names)
    PRIV_REQUIRES       # optional, list the private requirements
)
